# etl

./: .gitignore  README.md  docker-compose.yml
django_api/: docker-compose.dev.yml  docker-compose.yml
django_api/app/: .env.example  Dockerfile  pyproject.toml  start.sh
django_api/app/config/: asgi.py  settings.py  urls.py
django_api/app/config/components/: api_drf.py  applications.py  base.py  cors.py  database.py  development.py  internationalization.py  middleware.py  security.py  static_media.py
django_api/app/movies/: admin.py  models.py
django_api/app/movies/api/v1/: serializers.py  urls.py  views.py
django_api/app/movies/api/v1/services/: pagination.py
django_api/app/movies/locale/en/LC_MESSAGES/: django.po
django_api/app/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
django_api/app/movies/migrations/: 0001_initial.py
django_api/configs/: site.conf
etl/: .flake8  Dockerfile  configs.py  create_index.sh  env.example  etl_state.json  extract.py  load.py  main.py  pyproject.toml  start.sh  state_manager.py  transform.py  utils.py
